# ppi-aipw

./: .gitignore  README.md  main.tex  neurips_2026.sty  ppi_reproduction_experiments.tex  pyproject.toml  references.bib  requirements-llm-eval.txt  requirements.txt
.github/workflows/: publish.yml
docs/: causal.html  examples.html  index.html  ppi_aipw_vignette.md  r.html  site.css  site.js  theory.html
examples/: ppi_aipw_quickstart.ipynb
experiments/: __init__.py  estimators.py  grounded_toy_screening.py  llm_eval_benchmark.py  llm_eval_models.py  paper_simulation_recommendations.json  plot_results.py  ppi_mean_reproduction.py  simulate.py  toy_calibration_study.py
paper/: README.md  latexmkrc  main.tex  main_neurips.tex  neurips_2026.sty  paper_style.sty  references.bib
paper/assets/: table_llm_ppe_ranking.tex  table_llm_summary.tex  table_llm_summary_appendix.tex  table_paper_summary.tex
paper_assets/: table_paper_summary.tex
r/ppiAIPW/: DESCRIPTION  NAMESPACE  README.md
r/ppiAIPW/R/: api.R  calibration.R  causal.R  diagnostics.R  utils.R  weights.R
r/ppiAIPW/inst/doc/: ppiAIPW-causal.R  ppiAIPW-causal.html  ppiAIPW-diagnostics.R  ppiAIPW-quickstart.R  (+2 more)
r/ppiAIPW/man/: calibration_api.Rd  causal_inference.Rd  compute_two_sample_balancing_weights.Rd  mean_api.Rd  ppiAIPW-package.Rd  select_mean_method_cv.Rd
r/ppiAIPW/tests/: testthat.R
r/ppiAIPW/vignettes/: ppiAIPW-causal.Rmd  ppiAIPW-diagnostics.Rmd  ppiAIPW-quickstart.Rmd
scripts/: generate_calibration_workflow_artifacts.py  reproduce_paper.sh
src/ppi_aipw/: __init__.py  _api.py  _calibration.py  _causal.py  _diagnostics.py  _utils.py  _weights.py
tests/: test_causal.py  test_examples_smoke.py  test_llm_eval_benchmark.py  test_ppi_aipw.py  test_ppi_mean_reproduction.py  test_simulate.py  test_toy_calibration_study.py
(+7 files in other folders)
